--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,6 +30,7 @@ subjects:
 - !lcsh 'Superstition'
 - !lcsh 'Religions'
 - !lcsh 'Folklore'
+- GITenberg
 tableOfContents: 'Buddhism, its origin and ceremonies -- Magianism: the Parsees --
   Jewish superstitions -- Brahmanism -- Hindu mythology, and the Vishnu Purana --
   In China: Confucianism, Taouism, and Buddhism -- Among the Malays, the Slamatan
